clippy icon svg fixed width

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -135,3 +135,14 @@ p {
 a {
 	color: #1d9ad1;
 }
+
+/* clippy fix */
+
+code + .copy-to-clipboard {
+  margin-left: -2px;
+  border-left: 0 !important;
+  font-size: inherit !important;
+  vertical-align: middle;
+  height: 21px;
+  width: 19.6px;
+  top: 0px; }
